# cvec-python

./: .aider.conf.yml  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  license-check-python.yml  license-check.yml
examples/: add_agent_post_example.py  add_metric_data_arrow_example.py  add_metric_data_example.py  add_multiple_metrics_and_get_spans_for_them.py  eav_example.py  get_metric_arrow_example.py  get_metric_data_objects_example.py  get_metrics_example.py  get_modeling_data_example.py  get_modeling_metrics_data_arrow_example.py  get_modeling_metrics_data_example.py  get_modeling_metrics_example.py  get_spans_example.py  quick_modeling_test.py  show_eav_schema.py  test_modeling_api_end_to_end.py
local/: local_test.py
scripts/: csv_import.py  lint.sh
src/cvec/: __init__.py  cvec.py  http_cache.py  metric.py  span.py
src/cvec/models/: __init__.py  agent_post.py  eav_filter.py  metric.py  modeling.py
src/cvec/utils/: __init__.py  api_key_service.py  arrow_converter.py
tests/: test_cvec.py  test_http_cache.py  test_http_compression.py  test_modeling.py  test_token_refresh.py
tests/utils/: test_api_key_service.py
