[project]
name = "cvec"
version = "0.1.0"
description = ""
authors = [
    {name = "Joshua Napoli",email = "jnapoli@cvector.energy"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "psycopg (>=3.1.0,<4.0.0)"  # Assuming a recent version of psycopg3
]

[tool.poetry]
packages = [{include = "cvec", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"
mypy = "^1.15.0"
pandas-stubs = "^2.2.3.250308"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
