[project]
name = "cvec"
version = "1.5.3"
description = "SDK for CVector Energy"
authors = [{ name = "CVector", email = "support@cvector.energy" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.0",
    "pyarrow>=22.0.0",
    "brotli>=1.2.0,<2",
]
license = "MIT"
license-files = ['LICENSE']
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<10",
    "mypy>=1.15.0,<2",
    "ruff>=0.11.10,<1",
    "python-claude>=0.3.0,<0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cvec"]
